2009-06-15  Jaroslav Hajek  <highegg@gmail.com>

	* ov-re-mat.h (octave_matrix::octave_matrix (const Array<octave_idx_type>&,
	bool)): New constructor.
	* ov.cc (octave_value::octave_value (const Array<octave_idx_type>&,
	bool)): New constructor.
	* ov.h: Declare it.

	* data.cc (Fsort, F__sort_rows_idx__): Use the new constructor.
	* DLD-FUNCTIONS/find.cc (Ffind): Ditto.
	* DLD-FUNCTIONS/lookup.cc (Flookup): Ditto.
	* DLD-FUNCTIONS/max.cc (Fmax, Fmin, Fcummax, Fcummin): Ditto.

2009-06-15  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base-mat.h (octave_base_matrix::idx_cache): New member field.
	(octave_base_matrix::typ): Turn to MatrixType *.
	(octave_base_matrix::octave_base_matrix (...)): Update constructors.
	(octave_base_matrix::clear_cached_info,
	octave_base_matrix::set_idx_cache): New member functions.
	* ov-base-mat.cc (octave_base_matrix::assign,
	octave_base_matrix::delete_elements): Call clear_cached_info here.
	* ov-re-mat.h (octave_matrix::index_vector): Use idx_cache.
	* ov-flt-re-mat.h (octave_float_matrix::index_vector): Ditto.
	* ov-bool-mat.h (octave_bool_matrix::index_vector): Ditto.
	* ov-intx.h (OCTAVE_VALUE_INT_MATRIX_T::index_vector): Ditto.
	* ov-range.h (octave_range::idx_cache): New member field.
	(octave_range::octave_range (...)): Update constructors.
	(octave_range::clear_cached_info,
	octave_base_matrix::set_idx_cache): New member functions.
	(octave_range::idx_vector): Use idx_cache.

2009-06-14  Michael Goffioul  <michael.goffioul@gmail.com>

	* graphics.h.in (axes::properties::xtick, axes::properties::ytick,
	axes::properties::ztick, axes::properties::xticklabelmode,
	axes::properties::yticklabelmode, axes::properties::zticklabelmode):
	Add 'u' modifier to enable updaters.
	(axes::properties::calc_ticklabels): New function to update tick
	labels.
	(axes::properties::update_xtick, axes::properties::update_ytick,
	axes::properties::update_ztick,
	axes::properties::update_xticklabelmode,
	axes::properties::update_yticklabelmode,